tests/invalid/Return_Invalid_4.whiley
function f(int x) -> bool:
    return x
